frontend/tests/cases/negative/badExistential.gr.output
Type checking failed: 
Type error: frontend/tests/cases/negative/badExistential.gr:4:23:
Expected `f0.0 a0.0 -> a` but got `f t -> a`